--- a/style_portfolio.css
+++ b/style_portfolio.css
@@ -134,6 +134,7 @@ body {
     font-size: 1.5em;
     text-align: right;
     margin-right: 8.5vw;
+    text-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
 }
 
 .nav_buttons {
