--- a/style_portfolio.css
+++ b/style_portfolio.css
@@ -205,7 +205,7 @@ body {
 
 .introduction {
     font-family: Poppins;
-    text-align: justify;
+    text-align: left;
     
     height: 100vh; /* You can adjust this height */
     overflow-y: auto; /* Enables vertical scroll */
