--- a/style_portfolio.css
+++ b/style_portfolio.css
@@ -8,6 +8,8 @@
     justify-content: space-evenly;
     position: fixed;
     backdrop-filter: blur(8px);
+    background-color: rgba (255,255,255,0.4);
+    
 }
 
 .dp {
