--- a/style_portfolio.css
+++ b/style_portfolio.css
@@ -4,10 +4,12 @@
     flex-direction: column;
     justify-items: center;
     align-items: center;
-    gap: 7vh;
+    gap: 5vh;
     justify-content: space-evenly;
     position: fixed;
-    height: 100vh;
+    height: 90vh;
+    margin-top: 3.1vh;
+    margin-left: 2vw;
     transition-duration: 0.5s;
     transition-timing-function: ease in;    
 }
@@ -22,10 +24,7 @@
     border-left: 1px solid rgba (255,255,255,0.4);
     /* background-color: rgba (255,255,255,0.4); */
     border-radius: 25px;
-    box-shadow: 3px 1px 1px rgba(0, 0, 0, 0.089);
-    backdrop-filter: blur(8px);
-    background-color: rgba (255,255,255,0.4);
-    
+    box-shadow: 5px 5px 1px rgba(0, 0, 0, 0.089);    
 }
 
 .dp {
@@ -33,7 +32,7 @@
     border-radius: 50%;
     width: 150px;
     height: 150px;
-    margin-top: 77px;
+    margin-top: 8px;
     background-image: url("dp\ shourya.jpg");
     background-size: cover;
     box-shadow: -8px 6px 13.5px rgba(0, 0, 0, 0.7);
