--- a/style_portfolio.css
+++ b/style_portfolio.css
@@ -4,11 +4,12 @@
     flex-direction: column;
     justify-items: center;
     align-items: center;
-    gap: 7vh;
+    gap: 5vh;
     justify-content: space-evenly;
     position: fixed;
-<<<<<<< HEAD
-    height: 100vh;
+    height: 90vh;
+    margin-top: 3.1vh;
+    margin-left: 2vw;
     transition-duration: 0.5s;
     transition-timing-function: ease in;    
 }
@@ -23,12 +24,7 @@
     border-left: 1px solid rgba (255,255,255,0.4);
     /* background-color: rgba (255,255,255,0.4); */
     border-radius: 25px;
-    box-shadow: 3px 1px 1px rgba(0, 0, 0, 0.089);
-=======
-    backdrop-filter: blur(8px);
-    background-color: rgba (255,255,255,0.4);
-    
->>>>>>> 20ddbd83f216478882a98c36dc2755a2096214d0
+    box-shadow: 5px 5px 1px rgba(0, 0, 0, 0.089);
 }
 
 .dp {
@@ -36,7 +32,7 @@
     border-radius: 50%;
     width: 150px;
     height: 150px;
-    margin-top: 77px;
+    margin-top: 8px;
     background-image: url("dp\ shourya.jpg");
     background-size: cover;
     box-shadow: -8px 6px 13.5px rgba(0, 0, 0, 0.7);
@@ -135,11 +131,7 @@ body {
 }
 
 .main_body {
-<<<<<<< HEAD
     margin-left: 29.16vw;
-=======
-    margin-left: 25.16vw;
->>>>>>> 20ddbd83f216478882a98c36dc2755a2096214d0
     /* push it right so it doesn’t overlap sidebar */
     padding: 20px;
     /* optional: add some inner spacing */
