--- a/style.css
+++ b/style.css
@@ -237,6 +237,17 @@ body {
     padding-left: 30px; /* Prevent content from sticking to scrollbar */
     direction: rtl; 
 }
+.introduction:hover {
+    transition-duration: 0.5s;
+    transition-timing-function: ease in;
+    background-color: rgb(244, 243, 243,0.5);
+    backdrop-filter: blur(2px);
+    border-top: 1px solid rgba (255,255,255,0.4);
+    border-left: 1px solid rgba (255,255,255,0.4);
+    /* background-color: rgba (255,255,255,0.4); */
+    border-radius: 25px;
+    box-shadow: 5px 5px 1px rgba(0, 0, 0, 0.089);
+}
 
 /* Optional Scrollbar Styling */
 .introduction::-webkit-scrollbar {
