--- a/style.css
+++ b/style.css
@@ -454,12 +454,12 @@ body::before {
   right: -150px;
   width: 300px;
   height: 300px;
-  background: radial-gradient(circle at center, #FFD700, #FFA500);
+  background: #FFC300;
   border-radius: 50%;
-  filter: blur(10px);             /* heavy blur */
-  box-shadow:
-    0 0 80px 50px rgba(255, 215, 0, 0.6),
-    0 0 100px 70px rgba(255, 165, 0, 0.4);
+  filter: blur(2px);             
+  box-shadow: -3px 14px 9.7px rgba(0, 0, 0, 0.25);
+    /* 0 0 80px 50px rgba(255, 215, 0, 0.6),
+    0 0 100px 70px rgba(255, 165, 0, 0.4); */
   pointer-events: none;
   z-index: -1;                   /* behind everything */
 }
