--- a/style.css
+++ b/style.css
@@ -156,10 +156,11 @@ body {
 
 .degree {
     font-family: Poppins;
-    font-size: 1.5em;
+    font-size: 1.2em;
     text-align: right;
     margin-right: 8.5vw;
-    text-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
+    text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
+    color: rgb(87, 87, 87);
 }
 
 .nav_buttons {
@@ -235,7 +236,9 @@ body {
     /* height: 100%;  */
     overflow-y: auto; /* Enables vertical scroll */
     padding-left: 30px; /* Prevent content from sticking to scrollbar */
-    direction: rtl; 
+    direction: rtl;
+    border: 0px solid ;
+    border-radius: 25px;; 
 }
 /* Optional Scrollbar Styling */
 .introduction::-webkit-scrollbar {
@@ -250,6 +253,10 @@ body {
     box-shadow: inset 0px -5em #00B0EB;
     height: 3em;
 }
+.introduction::-webkit-scrollbar-thumb:active{
+    background-color: #FFC300;
+    box-shadow: inset 0px -5em #FF5733;
+}
 .introduction > * {
     direction: ltr;
 }
@@ -263,6 +270,9 @@ h2
     /* justify-content: center; */
     justify-content: space-evenly;
     align-content: center;
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0 cover 40%;
 }
 
 .card1 {
@@ -400,6 +410,9 @@ h2
     /* justify-content: center; */
     justify-content: space-evenly;
     align-content: center;
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0 cover 40%;
 }
 .card4 {
     display: flex;
@@ -516,7 +529,7 @@ h2
 }
 
 .python_logo {
-    width: 5vw;
+    width: 6vw;
     height: 11vh;
     background-image: url("py_image.jpeg");
     background-size: cover;
@@ -552,4 +565,15 @@ body::before {
 p
 {
     font-size: 1.25em;
+}
+@keyframes appear {
+    from {
+        opacity: 0;
+        scale: 0.5;
+    }
+    to {
+        opacity: 1;
+        scale: 1;
+    }
+    
 }
