--- a/style.css
+++ b/style.css
@@ -264,11 +264,15 @@ h2
 {
     text-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
 }
+h3
+{
+    text-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
+}
 .cards {
     display: flex;
     flex-direction: row;
     /* justify-content: center; */
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-content: center;
     animation: appear linear;
     animation-timeline: view();
@@ -280,8 +284,8 @@ h2
     flex-direction: row;
     justify-content: space-evenly;
     /* align-items: center; */
-    width: 15.4vw;
-    height: 31.5vh;
+    width: 12vw;
+    height: 26.5vh;
     border: 5px dashed #51D3FF;
     border-radius: 25px;
     /* box-shadow: -11px 11px 16.6px rgba(0, 0, 0, 0.3); */
@@ -302,8 +306,8 @@ h2
 }
 
 .html_logo {
-    width: 6vw;
-    height: 10.7vh;
+    width: 3.5vw;
+    height: 8.2vh;
     background-image: url("html_trans.png");
     background-size: cover;
     background-position: center;
@@ -312,7 +316,7 @@ h2
 }
 
 .html_name {
-    font-size: 1.2rem;
+    font-size: .9em;
     color: #333;
     font-weight: 600;
     text-align: center;
@@ -323,8 +327,8 @@ h2
     flex-direction: row;
     justify-content: space-evenly;
     /* align-items: center; */
-    width: 15.4vw;
-    height: 31.5vh;
+    width: 12vw;
+    height: 26.5vh;
     border: 5px dashed #51D3FF;
     border-radius: 25px;
     /* box-shadow: -11px 11px 16.6px rgba(0, 0, 0, 0.3); */
@@ -345,8 +349,8 @@ h2
 }
 
 .css_logo {
-    width: 6vw;
-    height: 10.7vh;
+    width: 3.5vw;
+    height: 8.2vh;
     background-image: url("css_trans.png");
     background-size: cover;
     background-position: center;
@@ -355,7 +359,7 @@ h2
 }
 
 .css_name {
-    font-size: 1.2rem;
+    font-size: .9em;
     color: #333;
     font-weight: 600;
     text-align: center;
@@ -366,8 +370,8 @@ h2
     flex-direction: row;
     justify-content: space-evenly;
     /* align-items: center; */
-    width: 15.4vw;
-    height: 31.5vh;
+    width: 12vw;
+    height:26.5vh;
     border: 5px dashed #51D3FF;
     border-radius: 25px;
     /* box-shadow: -11px 11px 16.6px rgba(0, 0, 0, 0.3); */
@@ -388,8 +392,8 @@ h2
 }
 
 .cpp_logo {
-    width: 5vw;
-    height: 11vh;
+    width: 3.5vw;
+    height: 7.5vh;
     background-image: url("cpp_trans.png");
     background-size: cover;
     background-position: center;
@@ -398,7 +402,7 @@ h2
 }
 
 .cpp_name {
-    font-size: 1.2rem;
+    font-size: .9em;
     color: #333;
     font-weight: 600;
     text-align: center;
@@ -419,8 +423,8 @@ h2
     flex-direction: row;
     justify-content: space-evenly;
     /* align-items: center; */
-    width: 15.4vw;
-    height: 31.5vh;
+    width: 12vw;
+    height: 26.5vh;
     border: 5px dashed #51D3FF;
     border-radius: 25px;
     /* box-shadow: -11px 11px 16.6px rgba(0, 0, 0, 0.3); */
@@ -443,8 +447,8 @@ h2
 }
 
 .dart_logo {
-    width: 5vw;
-    height: 11vh;
+    width: 3.5vw;
+    height: 7.5vh;
     background-image: url("Dart_logo.png");
     background-size: cover;
     background-position: center;
@@ -453,7 +457,7 @@ h2
 }
 
 .dart_name {
-    font-size: 1.2rem;
+    font-size: .9rem;
     color: #333;
     font-weight: 600;
     text-align: center;
@@ -464,8 +468,8 @@ h2
     flex-direction: row;
     justify-content: space-evenly;
     /* align-items: center; */
-    width: 15.4vw;
-    height: 31.5vh;
+    width: 12vw;
+    height: 26.5vh;
     border: 5px dashed #51D3FF;
     border-radius: 25px;
     /* box-shadow: -11px 11px 16.6px rgba(0, 0, 0, 0.3); */
@@ -486,8 +490,8 @@ h2
 }
 
 .flutter_logo {
-    width: 5vw;
-    height: 11vh;
+    width: 3.5vw;
+    height: 7.5vh;
     background-image: url("flutter_logo.png");
     background-size: cover;
     background-position: center;
@@ -496,19 +500,19 @@ h2
 }
 
 .flutter_name {
-    font-size: 1.2rem;
+    font-size: .8em;
     color: #333;
     font-weight: 600;
     text-align: center;
-    margin-top: 4.5em;
+    margin-top: 5.2em;
 }
 .card6 {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     /* align-items: center; */
-    width: 15.4vw;
-    height: 31.5vh;
+    width: 12vw;
+    height: 26.5vh;
     border: 5px dashed #51D3FF;
     border-radius: 25px;
     /* box-shadow: -11px 11px 16.6px rgba(0, 0, 0, 0.3); */
@@ -529,8 +533,8 @@ h2
 }
 
 .python_logo {
-    width: 6vw;
-    height: 11vh;
+    width: 4.5vw;
+    height: 8vh;
     background-image: url("py_image.jpeg");
     background-size: cover;
     background-position: center;
@@ -539,7 +543,7 @@ h2
 }
 
 .python_name {
-    font-size: 1.2rem;
+    font-size: .9em;
     color: #333;
     font-weight: 600;
     text-align: center;
