--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-items: center;
     align-items: center;
-    gap: 5vh;
+    /* gap: 0px; */
     justify-content: space-evenly;
     position: fixed;
     height: 90vh;
@@ -32,7 +32,7 @@
     border-radius: 50%;
     width: 150px;
     height: 150px;
-    margin-top: 8px;
+    /* margin-top: px; */
     background-image: url("dp\ shourya.jpg");
     background-size: cover;
     box-shadow: -8px 6px 13.5px rgba(0, 0, 0, 0.7);
@@ -116,26 +116,39 @@
     /* text-decoration: underline; */
 }
 .github_logo {
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     background-image: url("git_logo.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     margin-top: 10px;
+    margin-inline-start: .3em;
     display: inline-block;
 }
 .linkedin_logo {
-    width: 50px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     background-image: url("linkedin_logo.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     margin-top: 10px;
     display: inline-block;
+    margin-inline-start: .3em;
     filter: saturate(0%) contrast(2);
     
+}
+.x_logo {
+    width: 20px;
+    height: 20px;
+    background-image: url("X-Logo.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: inline-block;
+    margin-inline-start: .3em;
+    /* filter: saturate(0%) contrast(2); */
 }
 body {
     margin: 0;
