--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@
     height: 200px;
     transition-duration: .5s;
     transition-timing-function: ease in;
+    cursor: url('Handwriting\ pixelated\ blue.cur') 0 0, auto;
 }
 
 .about_me {
@@ -62,6 +63,7 @@
     transition-duration: .5s;
     transition-timing-function: ease in;
     color: black;
+    cursor: url('Handwriting\ pixelated\ blue.cur') 0 0, auto;
     /* text-decoration: underline; */
 }
 
@@ -79,6 +81,7 @@
     transition-duration: .5s;
     transition-timing-function: ease in;
     color: black;
+    cursor: url('Handwriting\ pixelated\ blue.cur') 0 0, auto;
     /* text-decoration: underline; */
 }
 
@@ -96,6 +99,7 @@
     transition-duration: .5s;
     transition-timing-function: ease in;
     color: black;
+    cursor: url('Handwriting\ pixelated\ blue.cur') 0 0, auto;
     /* text-decoration: underline; */
 }
 
@@ -113,6 +117,7 @@
     transition-duration: .5s;
     transition-timing-function: ease in;
     color: black;
+    cursor: url('Handwriting\ pixelated\ blue.cur') 0 0, auto;
     /* text-decoration: underline; */
 }
 .github_logo {
@@ -164,8 +169,8 @@ body {
     background-size: 40px 40px;
     border: 5px dashed #51D3FF;
     border-radius: 25px;
+    cursor: url('Normal\ pixelated\ blue.cur') 0 0, auto;
 }
-
 .main_body {
     margin-left: 29.16vw;
     /* push it right so it doesn’t overlap sidebar */
@@ -290,6 +295,7 @@ body {
 .introduction::-webkit-scrollbar-thumb:active{
     background-color: #FFC300;
     box-shadow: inset 0px -5em #FF5733;
+    cursor: url('Handwriting\ pixelated\ blue.cur') 0 0, auto;
 }
 .introduction > * {
     direction: ltr;
