--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@
     height: 200px;
     transition-duration: .5s;
     transition-timing-function: ease in;
-    cursor: url('Handwriting\ pixelated\ blue.cur') 0 0, auto;
+    cursor: url('icons8-computer-mouse-20.png') 0 0, auto;
 }
 
 .about_me {
@@ -63,7 +63,7 @@
     transition-duration: .5s;
     transition-timing-function: ease in;
     color: black;
-    cursor: url('Handwriting\ pixelated\ blue.cur') 0 0, auto;
+    cursor: url('icons8-computer-mouse-20.png') 0 0, auto;
     /* text-decoration: underline; */
 }
 
@@ -81,7 +81,7 @@
     transition-duration: .5s;
     transition-timing-function: ease in;
     color: black;
-    cursor: url('Handwriting\ pixelated\ blue.cur') 0 0, auto;
+    cursor: url('icons8-computer-mouse-20.png') 0 0, auto;
     /* text-decoration: underline; */
 }
 
@@ -99,7 +99,7 @@
     transition-duration: .5s;
     transition-timing-function: ease in;
     color: black;
-    cursor: url('Handwriting\ pixelated\ blue.cur') 0 0, auto;
+    cursor: url('icons8-computer-mouse-20.png') 0 0, auto;
     /* text-decoration: underline; */
 }
 
@@ -117,7 +117,7 @@
     transition-duration: .5s;
     transition-timing-function: ease in;
     color: black;
-    cursor: url('Handwriting\ pixelated\ blue.cur') 0 0, auto;
+    cursor: url('icons8-computer-mouse-20.png') 0 0, auto;
     /* text-decoration: underline; */
 }
 .github_logo {
@@ -169,7 +169,7 @@ body {
     background-size: 40px 40px;
     border: 5px dashed #51D3FF;
     border-radius: 25px;
-    cursor: url('Normal\ pixelated\ blue.cur') 0 0, auto;
+    cursor: url('icons8-mouse-cursor-48.png') 0 0, auto;
 }
 .main_body {
     margin-left: 29.16vw;
@@ -295,7 +295,7 @@ body {
 .introduction::-webkit-scrollbar-thumb:active{
     background-color: #FFC300;
     box-shadow: inset 0px -5em #FF5733;
-    cursor: url('Handwriting\ pixelated\ blue.cur') 0 0, auto;
+    cursor: url('icons8-computer-mouse-20.png') 0 0, auto;
 }
 .introduction > * {
     direction: ltr;
