--- a/style.css
+++ b/style.css
@@ -353,14 +353,14 @@ body {
     direction: ltr;
 }
 
-h2 {
+/* h2 {
     text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
 }
 
 h3 {
-    /* text-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25); */
-    /* color: rgb(99, 99, 99); */
-}
+    text-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
+    color: rgb(99, 99, 99);
+} */
 
 .cards {
     display: flex;
