--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ body {
         linear-gradient(to right, #dedede 1px, transparent 1px),
         linear-gradient(to bottom, #dedede 1px, transparent 1px);
     background-size: 40px 40px;
-    border: 5px dashed #51D3FF;
+    /* border: 5px dashed #51D3FF; */
     border-radius: 25px;
     cursor: url('icons8-mouse-cursor-48.png') 0 0, auto;
 }
@@ -346,6 +346,10 @@ body {
 .introduction::-webkit-scrollbar-thumb:active {
     background-color: #FFC300;
     box-shadow: inset 0px -5em #FF5733;
+    cursor: url('icons8-computer-mouse-20.png') 0 0, auto;
+}
+.introduction::-webkit-scrollbar-thumb:hover
+{
     cursor: url('icons8-computer-mouse-20.png') 0 0, auto;
 }
 
