--- a/style.css
+++ b/style.css
@@ -726,7 +726,6 @@ body::before {
             #FFD700,
             #FFA500,
             #FFC300);
-    /* gradient gives visible movement */
     border-radius: 50%;
     box-shadow:
         0 0 80px 50px rgba(255, 195, 0, 0.3),
@@ -736,7 +735,6 @@ body::before {
     z-index: -1;
 
     animation: rotateSun 6s linear infinite;
-    /* noticeable spin speed */
 }
 
 p {
@@ -1094,8 +1092,8 @@ a:hover {
 html {
     scroll-behavior: smooth;
 }
-.mobile_info_skills
-{
+
+.mobile_info_skills {
     display: none;
 }
 
@@ -1139,6 +1137,7 @@ html {
         /* margin-left: em; */
         /* margin-top: em; */
     }
+
     .dp:hover {
         width: 12vw;
         height: 12vw;
@@ -1173,6 +1172,7 @@ html {
         margin-top: .3em;
         /* margin-inline-start: 0.2em; */
     }
+
     .x_logo:hover,
     .github_logo:hover,
     .linkedin_logo:hover {
@@ -1208,41 +1208,59 @@ html {
         /* margin-top: em; */
         position: relative;
     }
-    .card1,.card2,.card3,.card4,.card5,.card6,.card7,.card8,.card9,.card10,.card11,.card12 {
+
+    .card1,
+    .card2,
+    .card3,
+    .card4,
+    .card5,
+    .card6,
+    .card7,
+    .card8,
+    .card9,
+    .card10,
+    .card11,
+    .card12 {
         display: none;
         /* gap: 15em; */
     }
-  .mobile_info_skills
-  {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 97%;
-    padding: 1vw;
-    gap: 1vw;
-    font-weight: 600;
-    color: #333;
-    border: 2px dashed #51D3FF;
-    border-radius: 25px;
-    margin-bottom: 1em;
-    transition-duration: 0.5s;
-    transition-timing-function: ease in;
-    flex-wrap: wrap;
-  }
-  .mobile_info_skills:hover {
-    transition-duration: 0.5s;
-    transition-timing-function: ease in;
-    background-color: rgb(244, 243, 243, 0.5);
-    backdrop-filter: blur(2px);
-    border-top: 1px solid rgba (255, 255, 255, 0.4);
-    border-left: 1px solid rgba (255, 255, 255, 0.4);
-    /* background-color: rgba (255,255,255,0.4); */
-    border-radius: 25px;
-    box-shadow: -5px 5px 1px rgba(0, 0, 0, 0.089);
-}
+
+    .mobile_info_skills {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 97%;
+        padding: 1vw;
+        gap: 1vw;
+        font-weight: 600;
+        color: #333;
+        border: 2px dashed #51D3FF;
+        border-radius: 25px;
+        margin-bottom: 1em;
+        transition-duration: 0.5s;
+        transition-timing-function: ease in;
+        flex-wrap: wrap;
+    }
+
+    .mobile_info_skills:hover {
+        transition-duration: 0.5s;
+        transition-timing-function: ease in;
+        background-color: rgb(244, 243, 243, 0.5);
+        backdrop-filter: blur(2px);
+        border-top: 1px solid rgba (255, 255, 255, 0.4);
+        border-left: 1px solid rgba (255, 255, 255, 0.4);
+        /* background-color: rgba (255,255,255,0.4); */
+        border-radius: 25px;
+        box-shadow: -5px 5px 1px rgba(0, 0, 0, 0.089);
+    }
+
+    body::before {
+        display: none;
+    }
 
 }
+
 @media screen and (max-width:500px) {
     .sidebar {
         width: 97vw;
@@ -1275,6 +1293,7 @@ html {
         transition-duration: .5s;
         transition-timing-function: ease in;
     }
+
     .about_me,
     .skills,
     .projects,
@@ -1285,6 +1304,7 @@ html {
         margin-top: .1em;
         /* color: #333; */
     }
+
     .about_me:hover,
     .skills:hover,
     .projects:hover,
@@ -1295,6 +1315,7 @@ html {
         margin-top: .1em;
         /* color: #333; */
     }
+
     body {
         overflow-x: hidden;
         overflow-y: hidden;
@@ -1302,20 +1323,21 @@ html {
         width: 100vw;
         height: 100vh;
     }
-    .degree
-    {
+
+    .degree {
         font-size: 1em;
         text-align: center;
         margin-right: 0;
         margin-top: 0em;
     }
-    .name
-    {
+
+    .name {
         font-size: 1.5em;
         text-align: center;
         margin-right: 0;
         margin-top: 6em;
     }
+
     .x_logo,
     .github_logo,
     .linkedin_logo {
@@ -1324,6 +1346,7 @@ html {
         margin-top: .3em;
         /* margin-inline-start: 0.2em; */
     }
+
     .x_logo:hover,
     .github_logo:hover,
     .linkedin_logo:hover {
@@ -1332,6 +1355,7 @@ html {
         margin-top: .3em;
         /* margin-inline-start: 0.2em; */
     }
+
     .dp {
         width: 10vw;
         height: 10vw;
@@ -1339,11 +1363,16 @@ html {
         /* margin-left: em; */
         /* margin-top: em; */
     }
+
     .dp:hover {
         width: 12vw;
         height: 12vw;
         border-radius: 50%;
         /* margin-left: em; */
         /* margin-top: em; */
-    }       
+    }
+
+    body::before {
+        display: none;
+    }
 }
